--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^7.0.12",
     "@nestjs/typeorm": "^9.0.0-next.2",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
