--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/typeorm": "^9.0.0-next.2",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "@nestjs/jwt": "^8.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "passport": "^0.6.0",
@@ -46,6 +47,7 @@
     "@types/jest": "29.2.4",
     "@types/node": "^18.11.18",
     "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
