--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
+    "@aws-sdk/client-s3": "^3.363.0",
+    "@nestjs/common": "^9.4.3",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^9.4.3",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.0.12",
     "@nestjs/typeorm": "^9.0.0-next.2",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
+    "aws-sdk": "^2.1410.0",
     "bcrypt": "^5.1.0",
-    "@nestjs/jwt": "^8.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "passport": "^0.6.0",
@@ -45,6 +50,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
